# rinha-de-backend-2024-q1-rust

./: .env  Cargo.toml  Dockerfile  docker-compose.yaml  init.sql  rustfmt.toml
.github/workflows/: docker.yml
.sqlx/: query-1b16c76aa8e914efa74b1e99d2bb8808e5acfc24ed16d9b6f22d22840d284cbb.json  query-1c0b0c77f6204e4595932b2dcedca38028c790117ce46b3fbaadee2c5d124935.json  query-293f9684f97d0a70675d58e20a0463db6093f6e274250c49f2f1adc7ba41afd8.json  query-5ed1fb6fd641921bd44e3942383ac4fa68f04fdd5a667991f404153e75d9853c.json  query-6243922bea543631f0e61e27fd448a7c8e08b61b4a6694d4ee7d9f00bb1c7d11.json  query-864c6142038c72a44c19978297d45cb2676add4bc519fd9b505f766ae31a2884.json  query-9b63f587d88310ee34fa85b22c5dfca683024802dd5771d9f95f12bb1059159e.json  query-a1ccc79a43675a05ec1209ca7a097c17de4fd104c7c15bf40b994e36d59fca3b.json  query-ab96b2dbcf0f1fb621c8e38a75ab5fa8bf821e58b49261a76fbdf65903985599.json  query-b73577b32c798edc25a147a1964cb7b7077fa17abbff25077b4735cb07265bbb.json  query-e6cb3f4afbd9b25f447e18c036ab2862b03d54c1cb702958ae7a4b4541ce2d3e.json
src/: main.rs
src/api/: handler.rs  mod.rs  model.rs  router.rs
