[package]
name = "rinha-de-backend-2024-q1-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.34", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "any", "postgres", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
